# fastapi-python-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: database.md
postman/: alpas-ai.postman_collection.json
scripts/: create_table.sql  insert_data.py
scripts/data/: financial_data.json
src/: app.py  settings.py
src/api/: debug.py  pnl_router.py  router.py
src/auth/: basic_authorization.py
src/db/: errors.py  session.py
src/db/repositories/: base.py  currency.py  pnl.py
src/db/tables/: pnl.py
src/exceptions/: pnl.py
src/models/: basemodel.py  currency.py  pnl.py
src/models/schema/: out_pnl.py
src/services/: pnl_service.py
src/utils/: db.py
tests/: conftest.py
tests/api/: test_delete_currency.py
