[tool.poetry]
name = "alpas-ai-solution"
version = "0.1.0"
description = "Solution for the Alpas AI recruitment"
authors = ["Ayush Pandey <ayushpandey.iitkgp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
SQLAlchemy = "1.4.42"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.6"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
